kustomize/web/base/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mf-swhurl-website
spec:
  selector:
    matchLabels:
      app: mf-swhurl-website
  replicas: 1
  template:
    metadata:
      labels:
        app: mf-swhurl-website
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: mf-swhurl-website
        image: swhurl/mf-website:1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
        ports:
        - containerPort: 3000
