kustomize/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-swhurl-website
spec:
  ports:
  - port: 80
    targetPort: 3000
