kustomize/web/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mf-swhurl-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - mf.swhurl.com
    secretName: mf-swhurl-com-tls
  rules:
  - host: mf.swhurl.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mf-swhurl-website
          servicePort: 80
